manifests/authentik/resources/ldap-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-nodeport
  namespace: authentik
spec:
  ports:
  - name: ldap
    port: 389
    protocol: TCP
    targetPort: 3389
    nodePort: 32389
  - name: ldaps
    port: 636
    protocol: TCP
    targetPort: 6636
    nodePort: 32636
  selector:
    app.kubernetes.io/name: authentik-outpost-ldap
    goauthentik.io/outpost-name: ldap
    goauthentik.io/outpost-type: ldap
  type: NodePort
