manifests/authentik/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
  ingress:
  # Ingress controller
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": haproxy-ingress
        app.kubernetes.io/name: haproxy-ingress
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
  # LDAP
  - toPorts:
    - ports:
      - port: "389"
        protocol: TCP
      - port: "636"
        protocol: TCP
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # Valkey
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: valkey
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  # Postgres
  - toEndpoints:
    - matchLabels:
        cnpg.io/instanceName: postgresql-1
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  # SMTP
  - toPorts:
    - ports:
      - port: "25"
        protocol: TCP
      - port: "587"
        protocol: TCP
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: valkey
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
  # Ingress controller
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: authentik
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backup
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      k8upjob: "true"
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # Offsite backup
  - toFQDNs:
    - matchName: ${backuphost}
  # Metrics
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus-pushgateway
        app.kubernetes.io/name: prometheus-pushgateway
    toPorts:
    - ports:
      - port: "9091"
        protocol: TCP
